fixed text overflow on toast. added scroll on page change

--- a/client/src/features/project/text/Text.css
+++ b/client/src/features/project/text/Text.css
@@ -1,11 +1,11 @@
 /* TextContainer Styles */
-#text-container {
+.text-container {
   display: flex;
   margin: 0rem 0rem 0.5rem 0rem;
 }
 
 /* Text Styles */
-.text-container {
+.text {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
